# maimai-android-touch-panel-rust

./: Cargo.toml  LICENSE  README.md  README_en-US.md  config.toml  start.bat
.github/workflows/: build.yml  test-build.yml
src/: serial_manager.rs  touch.rs  zone.rs
