[package]
name = "maimai-touch-rs"
version = "0.1.0"
edition = "2021"
description = "Turns an Android device into a maimai arcade touch panel controller"

[[example]]
name = "getevent"
path = "examples/getevent.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
serialport = "4"
anyhow = "1"
ctrlc = "3"
